fixed layout issues

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -5,18 +5,7 @@
   ;
 }
 
-/* App */
 .App {
   display: flexbox;
 }
 
-.diagnosis-button {
-  background-color: #008CBA;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-}
